ウィザード形式まで完成
ウィザード形式サーバー＆ビュー完成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,8 @@
 
 @import 'utils/decoration';
 
-// @import 'lectures';
-// @import 'subjects';
-// @import 'lectures';
+@import 'sheared/header';
+
+@import 'bookreview';
+@import 'comment';
+@import 'user';
