--- a/app/assets/stylesheets/bookreview.scss
+++ b/app/assets/stylesheets/bookreview.scss
@@ -1,3 +1,32 @@
-// Place all the styles related to the bookreview controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+// kv
+.kv{
+    position: relative;
+}
+.kv-img_small{
+    height:450px;
+    max-height:800px;
+}
+.kv-img_midum{
+    height:700px;
+    max-height:850px;
+}
+.kv-title{
+    width:60%;
+    text-align: center;
+    position: absolute;
+    color: white;
+    font-weight: bold; 
+    font-family :Quicksand, sans-serif;
+    top: 40%;
+    left: 50%;
+    -ms-transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    // fadeの処理
+    animation: fadeIn 5s ease 0s 1 normal;
+    @keyframes fadeIn { 
+        0% {opacity: 0} 
+        100% {opacity: 1} 
+     }
+}
+
