投稿機能実装
・newアクション/createアクション実装
・プレビュー機能実装

--- a/app/assets/stylesheets/foundation/colors.scss
+++ b/app/assets/stylesheets/foundation/colors.scss
@@ -30,4 +30,7 @@ $blue: #6495ed;
 // blue
 .c-blue{ color: $blue; }
 .bg-blue{ background: $blue; }
+// red
+.c-red{ color: $red; }
+.bg-red{ background: $red; }
 
