--- a/app/assets/stylesheets/foundation/common.scss
+++ b/app/assets/stylesheets/foundation/common.scss
@@ -41,7 +41,12 @@ p {
   font-size: 16px;
   line-height: 1.8;
 }
-
+.font-bold{
+  font-weight: bold;
+}
+.top-arrow{
+  font-size: 16px;
+}
 // ボタン関連
 .white-btn{
   padding: 6px 8px;
