--- a/app/views/devise/registrations/create_name.html.erb
+++ b/app/views/devise/registrations/create_name.html.erb
@@ -1,3 +1,3 @@
 <%= render "shared/secondheader" %>
-<h2>登録が完了しました</h2>
-<%= link_to "トップへ戻る", root_path class: "c-black other_path" %>
+<h2 class="p-1">登録が完了しました</h2>
+<%= link_to "トップへ戻る", root_path ,class: "c-black other_path p-1" %>
