--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,17 @@
 <%= render "shared/secondheader" %>
 
 <%= form_for(@user, url: user_registration_path) do |f| %>
-  <%= render "devise/shared/error_messages", resource: @user %>
   <h2 class='form-header-text w-60'>
     アカウントを新規登録します。
   </h2>
   <div class='form-wrap w-60 c-black bg-light-gray'>
+    <%= render "devise/shared/error_messages", resource: @user %>
     <div class="form-group t-center">
       <div class='form-text-wrap'>
         <label class="form-text">ニックネーム</label>
         <span class="indispensable c-white bg-blue">必須</span>
       </div>
-      <%= f.text_area :nickname, class:"input-default input-name w-60", id:"nickname", placeholder:"例) 読書大好き人間！！" %>
+      <%= f.text_area :nickname, class:"input-default input-name w-60", id:"nickname", placeholder:"ひらがな・漢字で入力してください" %>
     </div>
     <div class="form-group t-center">
       <div class='form-text-wrap'>
