--- a/app/assets/stylesheets/foundation/colors.scss
+++ b/app/assets/stylesheets/foundation/colors.scss
@@ -3,8 +3,8 @@ $red: #ff0000;
 $green: #78A54B;
 $brown :#685745;
 $dark-brown: #2a1907;
-$gray :#f5f5f5;
-$light-gray: #f5f5f5;;
+$gray :#dcdcdc;
+$light-gray: #f5f5f5;
 $black: #424242;
 $blue: #6495ed;
 
