--- a/app/views/devise/registrations/new_name.html.erb
+++ b/app/views/devise/registrations/new_name.html.erb
@@ -8,7 +8,7 @@
     <%= render "devise/shared/error_messages", resource: @name %>  
     <div class="form-group  t-center">
       <div class='form-text-wrap'>
-        <label class="form-text">お名前(全角)</label>
+        <label class="form-text" for="last_name">お名前(全角)</label>
         <span class="indispensable c-white bg-blue">必須</span>
       </div>
       <div class='input-name-wrap row'>
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group t-center">
       <div class='form-text-wrap'>
-        <label class="form-text">お名前カナ(全角)</label>
+        <label class="form-text" for="last_name_kana">お名前カナ(全角)</label>
         <span class="indispensable c-white bg-blue">必須</span>
       </div>
       <div class='input-name-wrap row'>
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group t-center">
       <div class='form-text-wrap'>
-        <label class="form-text">生年月日</label>
+        <label class="form-text" for="birth_date">生年月日</label>
         <span class="indispensable c-white bg-blue">必須</span>
       </div>
       <div class='input-birth-wrap row'>
