--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,28 +8,28 @@
     <%= render "devise/shared/error_messages", resource: @user %>
     <div class="form-group t-center">
       <div class='form-text-wrap'>
-        <label class="form-text">ニックネーム</label>
+        <label class="form-text" for="nickname">ニックネーム</label>
         <span class="indispensable c-white bg-blue">必須</span>
       </div>
       <%= f.text_area :nickname, class:"input-default input-name w-60", id:"nickname", placeholder:"ひらがな・漢字で入力してください" %>
     </div>
     <div class="form-group t-center">
       <div class='form-text-wrap'>
-        <label class="form-text">メールアドレス</label>
+        <label class="form-text" for="email">メールアドレス</label>
         <span class="indispensable c-white bg-blue">必須</span>
       </div>
       <%= f.email_field :email, class:"input-default w-60", id:"email", placeholder:"半角英数でご利用中のアドレスを入力", autofocus: true %>
     </div>
     <div class="form-group t-center">
       <div class='form-text-wrap'>
-        <label class="form-text">パスワード</label>
+        <label class="form-text" for="password">パスワード</label>
         <span class="indispensable c-white bg-blue">必須</span>
       </div>
       <%= f.password_field :password, class:"input-default w-60", id:"password", placeholder:"6文字以上の半角英数字" %>
     </div>
     <div class="form-group t-center">
       <div class='form-text-wrap'>
-        <label class="form-text">パスワード(確認)</label>
+        <label class="form-text" for="password_confirmation">パスワード(確認)</label>
         <span class="indispensable c-white bg-blue">必須</span>
       </div>
       <%= f.password_field :password_confirmation, class:"input-default w-60 ", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
