SNS認証・いいね機能

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import 'foundation/reset';
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import 'foundation/colors';
 @import 'foundation/common';
 
