--- a/app/assets/stylesheets/foundation/common.scss
+++ b/app/assets/stylesheets/foundation/common.scss
@@ -50,6 +50,12 @@ p {
 .top-arrow{
   font-size: 16px;
 }
+.fa-large{
+	font-size: 40px ;
+}
+.fa-lmidum{
+	font-size: 30px ;
+}
 // ボタン関連
 .white-btn{
   padding: 6px 8px;
