--- a/app/assets/stylesheets/layout/grid.scss
+++ b/app/assets/stylesheets/layout/grid.scss
@@ -44,6 +44,9 @@
 .justify-content-between {
     justify-content: space-between;
 }
+.justify-content-around {
+    justify-content: space-around;
+}
 // 縦並び(軸=y)
 .align-items-start {
     align-items: start;
