--- a/app/views/bookreviews/search.html.erb
+++ b/app/views/bookreviews/search.html.erb
@@ -23,9 +23,9 @@
     </li>
     <% end %>
     <% else %>
-  該当する書評・アウトプットはありません
+    <p>該当する書評・アウトプットはありません</p>
   <% end %>
   </ul>
 <main>
-<%= link_to "トップへ戻る", root_path ,class: "c-black other_path p-1" %>
+<%= link_to "トップへ戻る", root_path ,class: "c-black other_path p-2" %>
 
