--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,14 @@
   </h2>
   <div class='form-wrap w-60 c-black bg-light-gray'>
     <%= render "devise/shared/error_messages", resource: @user %>
+      <%= link_to  user_facebook_omniauth_authorize_path , class: "login c-white sns-wrap w-40 row facebook mb-1 align-items-center justify-content-start", method: :post do %>
+        <i class="fa-lmidum  fab fa-facebook-square d-block c-white w-30"></i>
+        <p>Facebookで登録する</p>
+      <% end %>
+      <%= link_to  user_google_oauth2_omniauth_authorize_path , class: "login c-black sns-wrap w-40 row google mb-1 align-items-center justify-content-start bg-white", method: :post do %>
+        <i class="fa-lmidum  fab fa-google-plus-square d-block c-black w-30"></i>
+        <p class="c-black">Googleで登録する</p>
+      <% end %>
     <div class="form-group t-center">
       <div class='form-text-wrap'>
         <label class="form-text" for="nickname">ニックネーム</label>
@@ -20,6 +28,10 @@
       </div>
       <%= f.email_field :email, class:"input-default w-60", id:"email", placeholder:"半角英数でご利用中のアドレスを入力", autofocus: true %>
     </div>
+
+  <%# sns認証の場合はパスワードを入力しない %>
+  <% unless session["devise.regist_data"] && session["devise.regist_data"]["sns"] %>
+
     <div class="form-group t-center">
       <div class='form-text-wrap'>
         <label class="form-text" for="password">パスワード</label>
@@ -34,6 +46,7 @@
       </div>
       <%= f.password_field :password_confirmation, class:"input-default w-60 ", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
     </div>
+  <% end %>  
      <div class="form-group t-center ">
        <%= link_to '>>ログインページはこちらです。', new_user_session_path, class: "c-black other_path" %>
      </div>
