--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
        <%= link_to 'ログアウト',  destroy_user_session_path, method: :delete, class: "c-black" %>
       </p>
       <p class="white-btn t-center bg-white a_decorate ">
-        <%= link_to "マイページ", "#", class: "c-black" %>
+        <%= link_to "マイページ", account_path , class: "c-black" %>
       </p>
     <% else %>
       <p class="white-btn t-center bg-white a_decorate">
