--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -74,3 +74,12 @@
     padding: 0 5px;
 }
 
+// facebook google
+.sns-wrap{
+   padding:15px 20px;
+    border-radius:4px;
+    margin:0 auto;
+}
+.facebook{
+    background-color: rgb(56,81,132);
+}
