--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -10,7 +10,7 @@
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <div class="form-group t-center ">
-    <%= link_to ">>パスワードをお忘れの場合はコチラ", new_password_path(resource_name), class: "c-black other_path" %><br />
+    <%# <%= link_to ">>パスワードをお忘れの場合はコチラ", new_password_path(resource_name), class: "c-black other_path" %>
   </div>
 <% end %>
 
@@ -22,8 +22,3 @@
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
-  <% end %>
-<% end %>
