--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/secondheader" %>
 <main>
-<h2 class="c-blue p-2 w-40 ">投稿した書評・アウトプット</h2>
+<h2 class="c-blue p-2">投稿した書評・アウトプット</h2>
  <ul class='book-lists row w-90'>
   <% if @account.bookreviews[0] != nil %>
     <% @account.bookreviews.each do |book| %>
@@ -24,7 +24,7 @@
   <p class="py-1">投稿した書評・アウトプットはありません</p>
   <% end %>
   </ul>
-  <h2 class="c-blue p-2 w-40 ">イイね！した書評・アウトプット</h2>
+  <h2 class="c-blue p-2 ">イイね！した書評・アウトプット</h2>
   <ul class='book-lists row w-90'>
   <% if @like_reviews[0] != nil %>
     <% @like_reviews.each do |book| %>
