レスポンシブ調整

--- a/app/assets/stylesheets/bookreview.scss
+++ b/app/assets/stylesheets/bookreview.scss
@@ -2,14 +2,6 @@ $bp: 700px;
 // kv
 .kv{
   position: relative;
-  .kv-img_small{
-     height:450px;
-    max-height:800px;
-   }
-  .kv-img_midum{
-    height:700px;
-    max-height:850px;
-  }
 
   .kv-title{
     width:60%;
@@ -31,29 +23,18 @@ $bp: 700px;
     }   
     .kv-btn{
         width:55%;
+        margin: 0 auto;
     }
  }
 }
 @media screen and (max-width: $bp) {
-  .kv-btn{
-    width:80% !important ; 
+  .kv-title{
+   width:80% !important;
+   top: 50% !important;
   }
 }
 // 投稿一覧
 main{
-  h2{
-    position:relative;
-   }
-  h2::after{
-    content:"";
-    display:block;
-    width:400px;
-    height:3px;
-    background-color: #dda0dd;
-    position:absolute;
-    bottom:15px;
-    left:17px;
-    }
   ul{
     margin:0 auto;
     -webkit-flex-wrap: wrap; 
@@ -71,18 +52,23 @@ main{
     }
 }
 
-@media screen and (max-width: $bp) {
-  .book-list{
-   width:40%;
-  }
-}
-
 @mixin search-input-grid() {
   padding:10px;
   margin:5px;
 }
 
 // 検索エリア
+.search-form-wrap{
+  display: flex;
+  justify-content: start;
+  .search-form-group{
+    width:25%;
+    padding: 0rem 2rem;
+    .search-input{
+      width:100%;
+    }
+  }
+}
 .search-label{
     @include search-input-grid();
     width:100px;
@@ -93,9 +79,50 @@ main{
     border-radius:4px;
     border: 1px  #ccc solid;
 }
-.search-btn{
+.search-btn-wrap{
+  padding: 0.5rem 2.25rem;
+  .search-btn{
+    width:28%;
     font-size:20px;
-    padding:7px 10px;
+    border-radius:4px;
     border: none;
-    margin-left:15px;
+}
+}
+
+.title-wrap{
+  padding: 1rem 2rem;
+  .megane{
+    width:20px;
+    margin:0.5rem;
+  }
+}
+.book-list{
+  width:40%;
+}
+@media screen and (max-width: $bp) {
+  main{
+    .search-form-wrap{
+      display:block;
+      .search-form-group{
+        width:70% !important;
+      }
+    }
+
+    .title-wrap{
+      padding:1rem 1.25rem !important;
+      .megane{
+        width:25px !important;
+      }
+    }
+    .search-form-wrap{
+      display:block;
+      .search-form-group{
+        display:flex;
+      }
+      .search-btn{
+        margin-top:0.5rem;
+      }
+    }
+    
+  }
 }
