--- a/app/assets/stylesheets/sheared/header.scss
+++ b/app/assets/stylesheets/sheared/header.scss
@@ -1,8 +1,102 @@
+$bp: 700px;
 .global-nav{
   height:78px;
+  padding: 1% 2%;
+}
+@media screen and (max-width: $bp) {
+  .global-nav{
+    padding: 0.5% 1% !important;
+  }
+}
+.pc-nav{
+  top: 0;
+  right:0;
+  position: absolute;
+  height:78px;
   padding:10px;
-  .right-nav{
-      width:250px;
-  }   
+  z-index:3;
+}
+#nav{
+  z-index:2;
+  position: absolute;
+  width: 50%;
+  right: -60%;
+  top: 0;
+  background: #ffffff;
+  transition: .7s;
+}
+#nav ul{
+  padding-top: 80px;
+  padding-bottom: 20px;
+}
+#nav ul li{
+  list-style-type: none;
+  font-size: 20px;
+}
+#nav a{
+  display: block;
+  text-decoration: none;
+  color: #000000;
+  margin: 0 15px;
+  padding: 10px;
+  transition: .5s;
+}
+#nav li a:hover{
+  color: #ffffff;
+  background: #cd5c5c;
+  border-bottom: none;
+}
+#hamburger {
+  z-index:999;
+  
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  width: 50px;
+  height: 44px;
+  cursor: pointer;
+  transition: 1s;
+}
+.inner_line {
+  display: block;
+  position: absolute;
+  right: 0;
+  width: 50px;
+  height: 3px;
+  background-color: #ffffff;
+  transition: 1s;
+  border-radius: 4px;
+}
+#line1 {
+  top: 0;
+}
+#line2 {
+  top: 20px;
+}
+#line3 {
+  bottom: 0px;
 }
 
+.in{
+  transform: translateX(-100%);
+}
+.line_1,.line_2,.line_3{
+  background: #000000;
+}
+.line_1 {
+  transform: translateY(20px) rotate(-45deg);
+  top: 0;
+}
+.line_2 {
+  opacity: 0;
+}
+.line_3 {
+  transform: translateY(-20px) rotate(45deg);
+  bottom: 0;
+}
+
+@media screen and (max-width: 480px) {
+  #nav ul li {
+    font-size: 14px;
+  }
+}
