--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,10 +1,12 @@
-.form-header-text,.actions{
+$bp: 700px;
+.form-header-text{
     margin:3% auto 2%;
+    width:60%;
 }
 .form-wrap{
     margin:0 auto;
     padding:1% 3%;
-   
+    width:60%;
     .form-group{
         padding:1% 2%;
         .form-text{
@@ -30,14 +32,29 @@
         }
     }
 }
-
+@media screen and (max-width: $bp) {
+ .form-header-text{
+     width:100%;
+ }
+ .form-header-text{
+    margin: 3% 2%;
+ }   
+ .form-wrap{
+    width:100%;
+  }
+}  
 .other_path:hover{
     color:#6495ed;
 }
 
+.actions{
+    margin: 2% auto;
+}
 .action-btn{
   font-size:20px;
+  width:50%;
   padding:1.2% 2.5%;
+  border-radius:4px;
   border: none;
   
 }
@@ -79,10 +96,7 @@
     padding:10px 20px;
     border-radius:4px;
     margin:0 auto;
-    p{
-        // 〜以上、固定値、〜以下
-        font-size: clamp(1vw, 16px, 2vw);
-    }
+    font-size:16px;
     
 }
 .fa-lmidum{
