--- a/app/views/devise/registrations/new_name.html.erb
+++ b/app/views/devise/registrations/new_name.html.erb
@@ -1,10 +1,10 @@
 <%= render "shared/secondheader" %>
 
 <%= form_for @name do |f| %>
-   <h2 class='form-header-text w-60'>
+   <h2 class='form-header-text'>
      氏名・生年月日の登録をお願いします！
    </h2> 
-  <div class='form-wrap w-60 c-black bg-light-gray'>
+  <div class='form-wrapc-black bg-light-gray'>
     <%= render "devise/shared/error_messages", resource: @name %>  
     <div class="form-group  t-center">
       <div class='form-text-wrap'>
