--- a/app/views/shared/_secondheader.html.erb
+++ b/app/views/shared/_secondheader.html.erb
@@ -1,5 +1,3 @@
 <header class="global-nav bg-black row align-items-center justify-content-between c-white">
-    <h1>
-      <%= link_to 'BookShare', root_path ,class: "c-white" %>
-    </h1>
+    <h1><%= link_to 'BookShare', root_path ,class: "c-white" %></h1>
 </header>
