ウィザード訂正

--- a/app/views/bookreviews/show.html.erb
+++ b/app/views/bookreviews/show.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/header" %>
+<%= render "shared/secondheader" %>
 <section class="p-2">
  <div class="sec-top row align-items-center">
   <h2 class="c-blue py-1">タイトル: <%= @bookreview.title %></h2>
