スマホ画像

--- a/app/views/bookreviews/index.html.erb
+++ b/app/views/bookreviews/index.html.erb
@@ -7,7 +7,8 @@
 <div class="overflow-hidden">
 
 <div class="kv">
-  <%= image_tag 'luis.jpg', class: 'kv-img_midum  vw-100' %>
+  <%= image_tag 'luis.jpg', class: 'kv-img_midum  vw-100 pc' %>
+  <%= image_tag 'sp-top.jpg', class: 'kv-img_midum  vw-100 sp' %>
   <%= render "shared/header" %>
   <div class="kv-title fade">
     <h1>BookShare</h1>
