--- a/app/views/devise/registrations/new_name.html.erb
+++ b/app/views/devise/registrations/new_name.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for @name do |f| %>
    <h2 class='form-header-text'>
-     氏名・生年月日の登録をお願いします！
+     氏名・生年月日の登録をします。
    </h2> 
   <div class='form-wrap c-black bg-light-gray'>
     <%= render "devise/shared/error_messages", resource: @name %>  
