--- a/app/assets/stylesheets/foundation/common.scss
+++ b/app/assets/stylesheets/foundation/common.scss
@@ -43,18 +43,19 @@ h3{
   font-size:20px;
   font-weight:bold;
 }
+h4{
+  font-size:18px;
+  font-weight:bold;
+}
 @media screen and (max-width: $bp) {
   h1{
-    font-size:32px !important;
+    font-size:35px !important;
   }
   h2{
-    font-size:20px !important;
+    font-size:25px !important;
   }
   h3{
     font-size:18px !important;
-  }
-  p{
-    font-size: 13px  !important;
   }
 }
 p {
