--- a/app/views/bookreviews/index.html.erb
+++ b/app/views/bookreviews/index.html.erb
@@ -43,7 +43,7 @@
  <% end %>
  <div class="title-wrap row align-items-center">
     <%= image_tag 'pencil.png', class: 'megane' %>
-    <h2 class="c-blue">書評・アウトプット投稿一覧</h2>
+    <h2 class="c-blue">投稿一覧</h2>
  </div>
  <ul class='book-lists row w-90'>
   <% if @bookreviews[0] != nil %>
